download link changes

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	                <span class="number" data-number="20">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="/Users/megalakannan/Documents/Megala/resume_fulltime_2.docx" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="https://thisismeg.github.io/resume_fulltime_2.docx" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -594,7 +594,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Links</h3>
-		            <p><a href="www.linkedin.com/in/megalakannan">LinkedIn</a></p>
+		            <p><a href="http://linkedin.com/in/megalakannan">LinkedIn</a></p>
 		            <p><a href="https://github.com/thisismeg">Github</a></p>
 	            </div>
 	          </div>
