--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:info@yoursite.com">msk2245@columbia.edu</a></p>
+		            <p><a href="mailto:msk2245@columbia.edu">msk2245@columbia.edu</a></p>
 		          </div>
 	          </div>
           </div>
@@ -594,7 +594,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Links</h3>
-		            <p><a href="http://linkedin.com/in/megalakannan">LinkedIn</a></p>
+		            <p><a href="https://linkedin.com/in/megalakannan">LinkedIn</a></p>
 		            <p><a href="https://github.com/thisismeg">Github</a></p>
 	            </div>
 	          </div>
