--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a Data Science graduate student at Columbia University, Data Science Institute graduating in May 2020. I have obtained my undergraduate in Computer Science from India. As a part of my graduate program I have acquired various skills to become a full fledged Data Scientist. I have studied courses like statistical modeling, machine learning and applied deep learning. </p>
+		            <p>I am a Data Scientist at PepsiCo with a graduate degree from Columbia University, Data Science Institute. I have obtained my undergraduate in Computer Science from India. As a part of my graduate program I have acquired various skills to become a full fledged Data Scientist. I have studied courses like statistical modeling, machine learning and applied deep learning. </p>
 
 					<p>My main interests lies in applied machine learning and deep learning techniques to solve real world problems. I enjoy working in natural language processing domain as well. My course projects have enabled me to gain the required skills to be a well rounded data scientist. I worked at Johnson & Jonhson as a data science intern where I sparked an interest in the 
 					healthcare domain. The problems being worked on in healthcare are very challenging and gave me a good exposure to real world data science applications. </p>
@@ -109,7 +109,7 @@
 	                <span class="number" data-number="20">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="https://thisismeg.github.io/resume_fulltime_2.docx" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="/Users/megalakannan/Documents/Megala/resume_fulltime_2.docx" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -170,6 +170,17 @@
 	    
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
+					  	<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Apr '20 - Present</span>
+		    					<h2>Data Scientist</h2>
+		    					<span class="position">PepsiCo</span>
+		    					<p>I am a Data Scientist in the Data Science and Analytics team at PepsiCo eCommerce. I primarily work on using data science techniques to optimize sales and ROI for products sold by PepsiCo</p>
+		    				</div>
+	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -388,11 +399,13 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Jan'19-Present</span>
+		    					<span class="date">Jan - May '19</span>
 		    					<h2>News Data Analytics</h2>
 		    					<span class="position">Microsoft Research</span>
-		    					<p>Create a platform to analyze news articles and events. Topic matching of articles with Wikipedia pages using BERT embeddings.
-		    					Implement Wikipedia category search tree to obtain categorization of articles.</p>
+		    					<p>Created a platform to analyze news articles and events. Topic matching of the news articles with Wikipedia pages.
+		    					Implemented Wikipedia category search tree to obtain categorization of articles.</p>
+		    					<a href= "https://github.com/thisismeg/newsCapstone"> Github Repo 
+								</a>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -415,7 +428,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Oct-Dec 2019</span>
+		    					<span class="date">Oct-Dec '19</span>
 		    					<h2>Recommendation system on yelp dataset</h2>
 		    					<span class="position">Personalization Theory, Columbia University</span>
 		    					<p>Built production grade recommendation systems on the yelp dataset for various businesses. Predicted ratings on active users using collaborative filtering, non-negative matrix factorization. 
@@ -430,7 +443,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Sep-Oct 2019</span>
+		    					<span class="date">Sep-Oct '19</span>
 		    					<h2>Movie recommender system</h2>
 		    					<span class="position">Personalization theory, Columbia University</span>
 		    					<p>Built production grade recommendation systems on the movie lens dataset. Designed user-based collaborative filtering and model-based matrix factorization using PySpark ML methods
@@ -445,7 +458,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Sep-Dec 2018</span>
+		    					<span class="date">Sep-Dec '18</span>
 		    					<h2>The global refugee crisis</h2>
 		    					<span class="position">Exploratory data analysis and visualization, Columbia University</span>
 		    					<p>Identified the humanitarian crisis using UNHCR population of concerns data. Explored the datasets to obtain the countries with highest refugee population using R tidyverse. 
@@ -460,7 +473,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Jun-Dec 2017</span>
+		    					<span class="date">Jun-Dec '17</span>
 		    					<h2>Context based hashtag recommendation system</h2>
 		    					<span class="position">Software development lab, College of Engineering Guindy</span>
 		    					<p> Performed topic modelling on twitter posts using Latent Dirichlet Allocation. 
@@ -561,7 +574,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>2N, 184 Claremont Ave New York, NY 10027</p>
+		            <p>New York, NY 10027</p>
 		          </div>
 	          </div>
           </div>
@@ -583,7 +596,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:msk2245@columbia.edu">msk2245@columbia.edu</a></p>
+		            <p><a href="mailto:info@yoursite.com">msk2245@columbia.edu</a></p>
 		          </div>
 	          </div>
           </div>
@@ -594,7 +607,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Links</h3>
-		            <p><a href="https://linkedin.com/in/megalakannan">LinkedIn</a></p>
+		            <p><a href="www.linkedin.com/in/megalakannan">LinkedIn</a></p>
 		            <p><a href="https://github.com/thisismeg">Github</a></p>
 	            </div>
 	          </div>
